# D-ND_LAB

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.schema.json  docker-compose.yml  install.sh  mkdocs.yml  mml.schema.json  pyproject.toml
core/: __init__.py  aeternitas.py  agent.py  anti_loop_guard.py  api.py  autopsy.py  benchmark.py  bias_corrector.py  bicono_extractor.py  build_field.py  cli.py  config.py  domain_request_runner.py  io_movements.py  lab_agent.py  lab_context_template.md  lab_graph.py  llm_adapter.py  narrative_writer.py  paths.py  promotion_proposer.py  refiner.py  refresh_detector.py  report_falsifier.py  seed_integrator.py  semantic_bridge.py  skill_loader.py  ssp_pipeline.py  structural_check.py  tools.py  trajectory_apply.py  trajectory_evaluator.py  trajectory_state.py  verify_assertions.py  veritas_score.py
dashboard/: index.html
deploy/: README.md  d-nd-lab-dashboard.service.example  nginx-dashboard.conf.example
docker/: nginx.conf
docs/: ADMIN_LAB_RUN_BRIDGE.md  ASSISTANT_RUNTIME_AWARENESS.md  ASSISTANT_RUNTIME_CONTEXT.md  BITCOIN_ALIPIO_METHOD_INTAKE_20260518.md  BITCOIN_DAILY_INEFFICIENCY_CANDIDATE_20260519.md  BITCOIN_REGIME_LAB_SEED_20260518.md  COGNITIVE_ARCHIVE_INTEGRATION.md  CONTRIBUTION_PREPORT.md  DOMAIN_PRESETS.md  DOMAIN_TRANSCENDENCE_AWARENESS.md  FINANCE_REFERENCE_E2E_20260517.md  FINANCE_ROADMAP_20260517.md  INSTALL_PROCEDURE.md  LAB_DOMAIN_ROADMAP_20260511.md  LAB_INFORMATION_ONBOARDING.md  LAB_SURFACE_TOPOLOGY.md  LAB_THOUGHT_AND_CAPABILITY_CASCADE.md  META_LAB_ARCHITECTURE.md  META_LAB_AUTONOMOUS_FINANCE_REQUEST_20260517.md  META_LAB_CAPABILITY_STACK.md  META_LAB_FINANCE_REFERENCE_COMPARISON_20260517.md  META_LAB_SKILL_INTENT_GUIDE.md  META_LAB_SKILL_READING_PROTOCOL.md  NARRATIVE_VIEWPOINTS.md  POSSIBILITY_FIELD_REGISTRY.md  README.md  RISOLUTIVO_PRE_FINANCE_CYCLE.md  SESSION_BRIEF_2026-05-02.md  SKILL_CATALOG.md  SKILL_DIAGNOSTIC.md  SKILL_FIELD_MAP.md  THIA_PUBLIC_FUNNEL.md  UI_COGNITIVE_PROCESS.md  architecture.md  changelog.json  config.md  index.md  physics_reinstall_snapshot_20260516.md  quickstart.md  roadmap.md
examples/: README.md
scripts/: restore_physics_snapshot.sh
tests/: README.md  test_anti_loop_guard.py
tools/: bitcoin-refresh-value.sh  dnd-cycle.sh  dnd-init.sh  (+9 more)
(+362 files in other folders)
