[project]
name = "d-nd-lab"
version = "0.1.0-alpha"
description = "Autonomous research lab — D-ND modus applied to any structured domain"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Graziano Guiducci" },
]
keywords = ["agent", "autonomous", "research", "lab", "d-nd", "non-dual", "llm", "openrouter", "mcp"]

dependencies = [
    # LLM client (OpenAI-compatible — covers OpenRouter / OpenAI / Anthropic compat / Ollama)
    "openai>=2.0",

    # Knowledge graph for seed evolution (replaces ZEP-style external memory)
    "networkx>=3.4",

    # MCP — Model Context Protocol (tool exposure standard 2026)
    "mcp>=1.20",

    # CLI scaffold
    "click>=8.2",

    # Config validation
    "jsonschema>=4.23",

    # HTTP utilities (notifications, optional connectors)
    "httpx>=0.28",

    # YAML config support (alternative to JSON for human-friendly configs)
    "pyyaml>=6.0",

    # Dashboard (Phase 6) — optional but small enough to ship in core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# Domain-specific extras. Installed only if user activates the domain.
physics = [
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "mpmath>=1.3",
    "matplotlib>=3.9",
]
editorial = [
    # Embeddings + FTS for archive search (Phase 4)
    "chromadb>=1.0",
    "rank-bm25>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.10",
    "mypy>=1.15",
]

[project.scripts]
# CLI entry point — `dndlab run --domain physics`
dndlab = "core.cli:main"

[project.urls]
Homepage = "https://github.com/GrazianoGuiducci/D-ND_LAB"
Documentation = "https://github.com/GrazianoGuiducci/D-ND_LAB/tree/main/docs"
Repository = "https://github.com/GrazianoGuiducci/D-ND_LAB"
Issues = "https://github.com/GrazianoGuiducci/D-ND_LAB/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.uv]
# uv-specific — fast resolver, lockfile via `uv lock`
managed = true
